crates/cctui-tui/src/snapshots/cctui__view_snapshots__conversation_permission_card_narrow.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: "render_screen_sized(&mut app, 60, 20)"
---
 infra (main) on orion ── opus ── $1.25  ⚠ 1 approval pendin
Looking at the views first.                                ▕
                                                           ▕
- one                                                      ▕
- two                                                      ▕
⏱ 12.4k in / 1.1k out                                      ▕
⏱ 38s                                                      ▕
                                                           ▕
◆ lane-b                                                   ▐
the parser lane is rebased                                 ▐
· keep-alive tick                                          ▐
⟳ context reset (/clear)                                   ▐
                                                           ▐
◁ Reply done                                               ▐
┌ ⚠ Permission · Bash ─────────────────────────────────────┐
│ $ cargo test --workspace                                 │
└ y allow   n deny   A allow + auto-approve ───────────────┘
────────────────────────────────────────────────────────────
 ◆ waiting for input
❯  Type a message...
