crates/cctui-tui/src/snapshots/cctui__view_snapshots__conversation_plan_card_refining.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 100
expression: render_screen(&mut app)
---
 infra (main) on orion ── opus ── $1.25 ── P
Looking at the views first.                                                                        ▕
                                                                                                   ▕
- one                                                                                              ▕
- two                                                                                              ▕
⏱ 12.4k in / 1.1k out                                                                              ▕
⏱ 38s                                                                                              ▕
                                                                                                   ▐
◆ lane-b                                                                                           ▐
the parser lane is rebased                                                                         ▐
⟳ context reset (/clear)                                                                           ▐
                                                                                                   ▐
◁ Reply done                                                                                       ▐
┌ Plan ready for review ───────────────────────────────────────────────────────────────────────────┐
│ # Plan                                                                                           │
│                                                                                                  │
│ - rework the reducer                                                                             │
│ - add the card                                                                                   │
├──────────────────────────────────────────────────────────────────────────────────────────────────┤
│ refine: make it smaller_   Enter send  Esc cancel                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
 ◆ waiting for input
❯  Type a message...
