crates/cctui-tui/src/snapshots/cctui__view_snapshots__conversation_search_committed_shows_the_hit_count.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 405
expression: render_screen(&mut app)
---
 infra (main) on orion ── opus ── $1.25 ── /parser 1/3
                                                                                                   ▐
                                                                                                   ▐
❯ You                                                                                              ▐
add a snapshot harness                                                                             ▐
                                                                                                   ▐
∴ thinking (2 lines)  (2 more · o)                                                                 ▐
 Read  crates/cctui-tui/src/main.rs  read                                                          ▐
└ 984 lines                                                                                        ▐
 Bash  cargo test  write                                                                           ▐
└ ✗ exit 101 · 3 failed  (2 more · o)                                                              ▐
                                                                                                   ▐
● Assistant                                                                                        ▐
Looking at the views first.                                                                        ▐
                                                                                                   ▐
- one                                                                                              ▐
- two                                                                                              ▐
⏱ 12.4k in / 1.1k out                                                                              ▕
⏱ 38s                                                                                              ▕
                                                                                                   ▕
◆ lane-b                                                                                           ▕
────────────────────────────────────────────────────────────────────────────────────────────────────
 ◆ waiting for input
❯  Type a message...
